--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,16 @@ img {
   max-height: 600px;
   /* margin-bottom: 60px; */
   padding: 188px 0;
+
+
+  background-image: linear-gradient(
+    to bottom, 
+    rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)
+    ),
+    url(../images/Hero-bg.jpg);
+
+
 }
 
 
@@ -191,7 +201,9 @@ img {
   width: calc((100% - 72px) / 4);
   margin: 0 auto;
 }
-
+.advantage-icon{
+  
+}
 .title-three {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
