--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h6 {
   margin: 0;
 }
 .container {
-  max-width: 1158px;
+  max-width: 1440px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -146,7 +146,9 @@ img {
     rgba(46, 47, 66, 0.70)
     ),
     url(../images/Hero-bg.jpg);
-
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
 
 }
 
@@ -182,6 +184,7 @@ img {
   align-items: center;
   display: block;
   margin: 48px auto 0;
+  transition: cubic-bezier(0.4, 0.2, 0, 1) 250ms;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -202,7 +205,15 @@ img {
   margin: 0 auto;
 }
 .advantage-icon{
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 100px;
+  background-color: var(--cloud);
+  border: 1px solid var(--lightslate);
+  border-radius: 4px;
+  height: 112px;
+  margin-bottom: 8px;
 }
 .title-three {
   font-family: "Roboto", sans-serif;
