--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ a {
   --cloud: #f4f4fd;
   --navybluemodal: #2E2F42·40%;
   --grey: #2e2f42;
-  --grey-70: rgba(46, 47, 66, 0.70));
+  --grey-70: rgba(46, 47, 66, 0.7);
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
@@ -134,25 +134,22 @@ img {
 /* HERO */
 
 .hero-section {
+  max-width: 1440px;
+  margin: 0 auto;
   background-color: var(--navyblue);
   max-height: 600px;
   /* margin-bottom: 60px; */
   padding: 188px 0;
-
-
   background-image: linear-gradient(
-    to bottom, 
-    rgba(46, 47, 66, 0.70), 
-    rgba(46, 47, 66, 0.70)
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
     ),
     url(../images/Hero-bg.jpg);
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
-
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
-
 
 .title-one {
   color: var(--white);
@@ -184,7 +181,7 @@ background-size: cover;
   align-items: center;
   display: block;
   margin: 48px auto 0;
-  transition: cubic-bezier(0.4, 0.2, 0, 1) 250ms;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -204,7 +201,7 @@ background-size: cover;
   width: calc((100% - 72px) / 4);
   margin: 0 auto;
 }
-.advantage-icon{
+.advantage-icon {
   display: flex;
   align-items: center;
   justify-content: center;
