--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,6 @@ img {
 }
 .name-item {
   padding: 32px 0;
- 
 }
 .card-background {
   background-color: var(--white);
@@ -263,24 +262,28 @@ img {
 .centered {
   text-align: center;
 }
-.card-socials-list{
+.card-socials-list {
   display: flex;
   gap: 24px;
   justify-content: center;
- 
 }
 
-.card-socials-icon{
+.card-socials-icon {
   display: flex;
-  width: 40px;
-  height: 40px;
-  background-color:var(--iris);
+
+  background-color: var(--iris);
   fill: var(--white);
   border-radius: 50%;
   align-items: center;
   justify-content: center;
   margin-top: 8px;
+  width: 40px;
+  height: 40px;
 }
+.icon-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* OUR PORTFOLIO */
 .portfolio-list {
   display: flex;
