--- a/css/styles.css
+++ b/css/styles.css
@@ -280,8 +280,17 @@ img {
   width: 40px;
   height: 40px;
 }
-.icon-link {
+
+.icon-link:hover {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-socials-icon:hover,
+.card-socials-icon:focus {
+  background-color: var(--ocean);
+}
+
+.icon-fill {
+  fill: var(--cloud);
 }
 
 /* OUR PORTFOLIO */
