--- a/css/styles.css
+++ b/css/styles.css
@@ -281,12 +281,10 @@ img {
   height: 40px;
 }
 
-.icon-link:hover {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .card-socials-icon:hover,
 .card-socials-icon:focus {
   background-color: var(--ocean);
+  transition: background-color 2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-fill {
