--- a/css/styles.css
+++ b/css/styles.css
@@ -280,11 +280,13 @@ img {
   width: 40px;
   height: 40px;
 }
+.card-socials-icon {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .card-socials-icon:hover,
 .card-socials-icon:focus {
   background-color: var(--ocean);
-  transition: background-color 2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-fill {
