--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,6 @@ img {
 .card-item {
   width: calc((100% - 3 * 24px) / 4);
   border-radius: 0 0 4px 4px;
-  /* box-shadow: 10px 10px 10px px rgba(0, 0, 0, 0.5) */
 }
 .name-item {
   padding: 32px 0;
@@ -270,7 +269,8 @@ img {
 
 .card-socials-icon {
   display: flex;
-
+  /* TODO */
+  height: 100%;
   background-color: var(--iris);
   fill: var(--white);
   border-radius: 50%;
@@ -301,8 +301,14 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
+
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-name {
