--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,30 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.portfolio-image {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  position: relative;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+  padding: 40px 32px;
+  background-color: var(--iris);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay-text {
+  position: absolute;
+}
+.overlay-text:hover .portfolio-overlay {
+  transform: translateY(0);
+}
 
 .portfolio-name {
   padding: 32px 16px;
