--- a/css/styles.css
+++ b/css/styles.css
@@ -314,10 +314,17 @@ img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-overlay {
+.portfolio{
   position: relative;
+}
+.portfolio-overlay{
+  position: absolute;
+}
+
+.overlay-text{
+  /* position: absolute; */
   top: 0;
-  font-size: 16px;
+  font-style: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cloud);
@@ -326,19 +333,15 @@ img {
   height: 100%;
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overlay-text {
-  position: absolute;
-}
-.overlay-text:hover .portfolio-overlay {
-  transform: translateY(0);
-}
-
 .portfolio-name {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+.product:hover .portfolio-overlay{
+  transform: translateY(0%);
 }
 /* !FOOTER */
 .footer {
