--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,10 @@ img {
 }
 
 .portfolio-item {
+  
+  position: relative;
+  
+  overflow: hidden;
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -312,12 +316,10 @@ img {
 }
 .portfolio-image {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
-.portfolio-overlay{
-  position: relative;
-}
+
 
 .overlay-text{
   position: absolute;
@@ -338,7 +340,7 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.portfolio-image:hover .overlay-text{
+.portfolio-item:hover .overlay-text{
   transform: translateY(0);
 }
 
