--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,13 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
+.footer-full {
+  display: flex;
+  align-items: baseline;
+}
+.footer-left {
+  margin-right: 120px;
+}
 .layot {
   display: inline-block;
   margin-bottom: 16px;
@@ -369,4 +375,37 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+.footer-socials {
+}
+.footer-text {
+  font-weight: 500;
+  font-style: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+.footer-socials-list {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  gap: 16px;
+}
+.icon-footer-fill {
+  fill: var(--white);
+}
+
+.footer-socials-icon {
+  display: flex;
+  /* TODO */
+  height: 100%;
+  background-color: var(--iris);
+  fill: var(--white);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
+  width: 40px;
+  height: 40px;
 }
