--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ img {
 .header-nav {
   display: flex;
   align-items: center;
-  position: relative;
+  
 }
 
 .full-logo {
@@ -101,6 +101,10 @@ img {
 .header-text {
   color: var(--slate);
   padding: 24px 0;
+
+
+
+  
 }
 
 .header-text:hover,
@@ -115,10 +119,11 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
+  position: relative;
 }
-.navigation-list::after{
+.navigation-item::after{
   color: var(--ocean);
-  content:'';
+  content:"";
   position: absolute;
   left: 0;
   bottom: -1px;
