--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ img {
 }
 /* !HEADER */
 .header {
+  
   border-bottom: 1px solid var(--cornflower);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -76,12 +77,12 @@ img {
   align-items: center;
   justify-content: space-between;
   gap: 40px;
+  position: relative;
 }
 
 .header-nav {
   display: flex;
   align-items: center;
-  
 }
 
 .full-logo {
@@ -101,10 +102,6 @@ img {
 .header-text {
   color: var(--slate);
   padding: 24px 0;
-
-
-
-  
 }
 
 .header-text:hover,
@@ -121,13 +118,15 @@ img {
   gap: 40px;
   position: relative;
 }
-.navigation-item::after{
+
+.navigation-item:hover::after {
   color: var(--ocean);
-  content:"";
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
   height: 4px;
+  width: 100px;
   background-color: var(--ocean);
   border-radius: 2px;
 }
