--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,10 @@ img {
 }
 /* !HEADER */
 .header {
+  position: relative;
   border-bottom: 1px solid var(--cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-inner {
@@ -74,6 +77,9 @@ img {
   align-items: center;
   justify-content: space-between;
   gap: 40px;
+  position: relative;
+  color: var(--ocean);
+  content: "";
 }
 
 .header-nav {
@@ -115,6 +121,18 @@ img {
 }
 .navigation-item {
   padding: 24px 0;
+  
+}
+
+.header-nav:hover::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  width: 50px;
+  background-color: var(--ocean);
+  border-radius: 2px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-item {
@@ -128,6 +146,8 @@ img {
 .address-list {
   display: flex;
   gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 /* !MAIN */
