--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,19 @@ img {
 }
 .navigation-item {
   padding: 24px 0;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+.navigation-item:hover::after {
+  
+  color: var(--ocean);
+  content: '';
+width: 100%;
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;background-color: var(--ocean);
+border-radius: 2px;
 }
 
 .address-item {
