--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,8 @@ img {
 /* !HEADER */
 .header {
   border-bottom: 1px solid var(--cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-inner {
@@ -99,7 +101,9 @@ img {
   color: var(--slate);
   padding: 24px 0;
 }
-
+.active::after {
+  color: var(--ocean);
+}
 .header-text:hover,
 .header-text:focus {
   color: var(--ocean);
@@ -116,18 +120,18 @@ img {
 .navigation-item {
   padding: 24px 0;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation-item:hover::after {
-  
   color: var(--ocean);
-  content: '';
-width: 100%;
-position: absolute;
-left: 0;
-bottom: -1px;
-height: 4px;background-color: var(--ocean);
-border-radius: 2px;
+  content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: var(--ocean);
+  border-radius: 2px;
 }
 
 .address-item {
