--- a/css/styles.css
+++ b/css/styles.css
@@ -364,12 +364,13 @@ img {
 .footer-full {
   display: flex;
   align-items: baseline;
-  margin-right: 120px;
+  
 }
 
 .layot {
   display: inline-block;
   margin-bottom: 16px;
+  
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -380,6 +381,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
+  
 }
 .white-logo {
   color: var(--cloud);
@@ -426,4 +428,7 @@ img {
 .footer-socials-icon:hover,
 .footer-socials-icon:focus {
   background-color: var(--green);
+}
+.forright{
+  margin-right: 120px;
 }
