--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,6 @@ img {
 /* !HEADER */
 .header {
   border-bottom: 1px solid var(--cornflower);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-inner {
@@ -101,9 +99,7 @@ img {
   color: var(--slate);
   padding: 24px 0;
 }
-.active::after {
-  color: var(--ocean);
-}
+
 .header-text:hover,
 .header-text:focus {
   color: var(--ocean);
@@ -119,19 +115,6 @@ img {
 }
 .navigation-item {
   padding: 24px 0;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation-item:hover::after {
-  color: var(--ocean);
-  content: "";
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: var(--ocean);
-  border-radius: 2px;
 }
 
 .address-item {
@@ -361,16 +344,10 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.footer-full {
-  display: flex;
-  align-items: baseline;
-  
-}
 
 .layot {
   display: inline-block;
   margin-bottom: 16px;
-  
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -381,7 +358,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
-  
+  /* padding: 24px 0; */
 }
 .white-logo {
   color: var(--cloud);
@@ -391,46 +368,5 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  max-width: 264px;
-  color: var(--white);
-  font-weight: 500;
-  margin-bottom: 16px;
-}
-
-.footer-socials-list {
-  display: flex;
-  width: 40px;
-  height: 40px;
-  gap: 16px;
-}
-.icon-footer-fill {
-  fill: var(--cloud);
-}
-
-.footer-socials-icon {
-  display: flex;
-  /* TODO */
-  height: 100%;
-  background-color: var(--iris);
-  fill: var(--white);
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  margin-top: 8px;
-  width: 40px;
-  height: 40px;
-}
-
-.footer-socials-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-socials-icon:hover,
-.footer-socials-icon:focus {
-  background-color: var(--green);
-}
-
-.footer-text-container{
-  margin-right: 120px;
   max-width: 264px;
 }
