--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,12 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
+.wrapper {
+  display: flex;
+}
+.footer-text-container {
+  margin-right: 120px;
+}
 .layot {
   display: inline-block;
   margin-bottom: 16px;
@@ -369,4 +374,34 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+.footer-text-social{
+  font-weight: 500;font-style: 16px;
+  line-height: 1.5;letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+
+.footer-socials-list{
+  display: flex;
+  gap: 16px;
+}
+.footer-socials-item{
+  width: 40px;
+  height: 40px;
+}
+.footer-socials-icon{
+  width: 100%;
+  height: 100%;background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.footer-socials-icon:hover,
+.footer-socials-icon:focus{background-color: var(--green);}
+
+.icon-footer-fill{
+  fill: var(--cloud);
 }
