--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,9 @@ img {
 /* !HEADER */
 .header {
   border-bottom: 1px solid var(--cornflower);
+  /* ! */
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-inner {
@@ -91,6 +94,9 @@ img {
   text-transform: uppercase;
   margin-right: 76px;
   padding: 24px 0;
+  /* ! */
+  position: relative;
+  color: var(--ocean);
 }
 .studio-logo {
   color: var(--navyblue);
@@ -98,6 +104,8 @@ img {
 .header-text {
   color: var(--slate);
   padding: 24px 0;
+  /* ! */
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-text:hover,
@@ -116,6 +124,16 @@ img {
 .navigation-item {
   padding: 24px 0;
 }
+/* ! */
+.navigation-item::ater{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: var(--ocean);
+  border-radius: 2px;
+}
 
 .address-item {
   color: var(--slate);
@@ -124,6 +142,8 @@ img {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  /* ! */
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-list {
   display: flex;
@@ -270,7 +290,7 @@ img {
 .card-socials-icon {
   display: flex;
   /* TODO */
-  height: 100%;
+  /* height: 100%; */
   background-color: var(--iris);
   fill: var(--white);
   border-radius: 50%;
@@ -346,6 +366,7 @@ img {
 }
 .wrapper {
   display: flex;
+  align-items: baseline;
 }
 .footer-text-container {
   margin-right: 120px;
@@ -375,33 +396,38 @@ img {
   letter-spacing: 0.02em;
   max-width: 264px;
 }
-.footer-text-social{
-  font-weight: 500;font-style: 16px;
-  line-height: 1.5;letter-spacing: 0.02em;
+.footer-text-social {
+  font-weight: 500;
+  font-style: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--white);
   margin-bottom: 16px;
 }
 
-.footer-socials-list{
+.footer-socials-list {
   display: flex;
   gap: 16px;
 }
-.footer-socials-item{
+.footer-socials-item {
   width: 40px;
   height: 40px;
 }
-.footer-socials-icon{
+.footer-socials-icon {
   width: 100%;
-  height: 100%;background-color: var(--iris);
+  height: 100%;
+  background-color: var(--iris);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-icon:hover,
-.footer-socials-icon:focus{background-color: var(--green);}
+.footer-socials-icon:focus {
+  background-color: var(--green);
+}
 
-.icon-footer-fill{
+.icon-footer-fill {
   fill: var(--cloud);
 }
