--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,8 @@ img {
 /* !HEADER */
 .header {
   border-bottom: 1px solid var(--cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-inner {
@@ -112,7 +114,11 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
+  
 }
+
+
+
 .navigation-item {
   padding: 24px 0;
 }
