--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,6 @@ img {
 .header-text {
   color: var(--slate);
   padding: 24px 0;
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .header-text:hover,
@@ -115,6 +114,8 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
 .navigation-item {
@@ -128,11 +129,11 @@ img {
 
 .accent::after {
   position: absolute;
-  content: " ";
-  
+  content: "";
   left: 0;
   bottom: -1px;
-  height: 4px;background-color: var(--ocean);
+  height: 4px;
+  background-color: var(--ocean);
   border-radius: 2px;
 }
 .address-item {
@@ -146,6 +147,8 @@ img {
 .address-list {
   display: flex;
   gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
 /* !MAIN */
