--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ img {
 .header-text {
   color: var(--slate);
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-text:hover,
@@ -116,7 +117,7 @@ img {
   gap: 40px;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-}
+
 
 .navigation-item {
   padding: 24px 0;
@@ -149,7 +150,7 @@ img {
   gap: 40px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-}
+
 
 /* !MAIN */
 /* HERO */
@@ -159,7 +160,6 @@ img {
   margin: 0 auto;
   background-color: var(--navyblue);
   max-height: 600px;
-  /* margin-bottom: 60px; */
   padding: 188px 0;
   background-image: linear-gradient(
       to bottom,
