--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ img {
   content: "";
   left: 0;
   bottom: -1px;
+  width: 100%;
   height: 4px;
   background-color: var(--ocean);
   border-radius: 2px;
@@ -298,7 +299,7 @@ img {
   align-items: center;
   justify-content: center;
   margin-top: 8px;
-  height: 100%;
+  /* height: 100%; */
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
